create model/view/action added

--- a/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
+++ b/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
@@ -18,8 +18,7 @@
                 <button type="submit" class="btn btn-success">
                     <span class="glyphicon glyphicon-search"></span>
                 </button>
-
-                <a class="btn btn-success pull-right" data-modal="" href="/Products/Create" id="btnCreate">
+                <a class="btn btn-success pull-right" data-modal="" href='@Url.Action("Create","Credits")' id="btnCreate">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </div>
