comment app user

--- a/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
+++ b/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
@@ -44,7 +44,7 @@
               grid.Column("Id", "ID"),
               grid.Column("Barcode", "Barcode", style: "col-lg-3"),
               grid.Column("Type", "Type", style: "col-lg-3"),
-              grid.Column("Owner", "Owner", style: "col-lg-3"),
+              grid.Column("OwnerId", "OwnerId", style: "col-lg-3"),
               grid.Column("Sum", header: "Sum", format: @<text>@String.Format("{0:C}", item.Sum) </text>),
               grid.Column(header: "Action", canSort: false, style: "action",
                 format: @<text>
