--- a/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
+++ b/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "SearchResultList";
 }
 
-<h2>SearchResultList</h2>
+<h2>Списък с всички кредити</h2>
 @using (Html.BeginForm("SearchResult", "Credits", FormMethod.Get))
 {
     <div class="row">
@@ -16,10 +16,10 @@
             
             <div class="col-lg-3">
                 <button type="submit" class="btn btn-success">
-                    <span class="glyphicon glyphicon-search"></span>
+                    <span class="glyphicon glyphicon-search"> Търси</span>
                 </button>
                 <a class="btn btn-success pull-right" data-modal="" href='@Url.Action("Create","Credits")' id="btnCreate">
-                    <span class="glyphicon glyphicon-plus"></span>
+                    <span class="glyphicon glyphicon-plus"> Добави</span>
                 </a>
             </div>
         </div>
@@ -44,13 +44,13 @@
               grid.Column("Id", "ID"),
               grid.Column("Barcode", "Barcode", style: "col-lg-3"),
               grid.Column("Type", "Type", style: "col-lg-3"),
-              grid.Column("OwnerId", "OwnerId", style: "col-lg-3"),
+              grid.Column("OwnerId", "Owner", style: "col-lg-3"),
               grid.Column("Sum", header: "Sum", format: @<text>@String.Format("{0:C}", item.Sum) </text>),
               grid.Column(header: "Action", canSort: false, style: "action",
                 format: @<text>
                 @Html.Raw("<a data-modal='' href='/credits/details/" + item.Id + "' id='" + item.Id + "' title='Detail'> <span class='glyphicon glyphicon-search'> </span> </a>")
                 @Html.Raw("<a data-modal='' href='/credits/edit/" + item.Id + "' id='" + item.Id + "' title='Edit'> <span class='glyphicon glyphicon-edit'> </span> </a>")
-                @Html.Raw("<a data-modal='' href='/credits/delete/" + item.Id + "' id='" + item.Id + "' title='Delete'> <span class='glyphicon glyphicon-trash'> </span> </a>")
+                @Html.Raw("<a data-modal='' href='/Credits/Delete/" + item.Id + "' id='" + item.Id + "' title='Delete'> <span class='glyphicon glyphicon-trash'> </span> </a>")
                 </text>)
                                                 ));
         }
