--- a/EGE/EGE.Web/Views/Credits/Edit.cshtml
+++ b/EGE/EGE.Web/Views/Credits/Edit.cshtml
@@ -9,7 +9,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Edit</h4>
+        <h2>Редактирай кредит</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
