--- a/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
+++ b/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
@@ -48,7 +48,7 @@
               grid.Column("Sum", header: "Sum", format: @<text>@String.Format("{0:C}", item.Sum) </text>),
               grid.Column(header: "Action", canSort: false, style: "action",
                 format: @<text>
-                @Html.Raw("<a data-modal='' href='/credits/details/" + item.Id + "' id='" + item.Id + "' title='Detail'> <span class='glyphicon glyphicon-search'> </span> </a>")
+               @* @Html.Raw("<a data-modal='' href='/credits/details/" + item.Id + "' id='" + item.Id + "' title='Detail'> <span class='glyphicon glyphicon-search'> </span> </a>")*@
                 @Html.Raw("<a data-modal='' href='/credits/edit/" + item.Id + "' id='" + item.Id + "' title='Edit'> <span class='glyphicon glyphicon-edit'> </span> </a>")
                 @Html.Raw("<a data-modal='' href='/Credits/Delete/" + item.Id + "' id='" + item.Id + "' title='Delete'> <span class='glyphicon glyphicon-trash'> </span> </a>")
                 </text>)
