--- a/EGE/EGE.Web/Views/Shared/_Layout.cshtml
+++ b/EGE/EGE.Web/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Кредити", "Index", "Credits")</li>
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    @*<li>@Html.ActionLink("Настройки", "About", "Home")</li>
+                    <li>@Html.ActionLink("Помощ", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -31,8 +31,8 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
-        <footer class="navbar-fixed-bottom text-center">
+     
+        <footer class="navbar-fixed-bottom text-center"><hr />
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
