--- a/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
+++ b/EGE/EGE.Web/Views/Credits/SearchResult.cshtml
@@ -43,8 +43,9 @@
         columns: grid.Columns(
               grid.Column("Id", "ID"),
               grid.Column("Barcode", "Barcode", style: "col-lg-3"),
-              grid.Column("Type", "Type", style: "col-lg-3"),
-              grid.Column("OwnerId", "Owner", style: "col-lg-3"),
+              grid.Column("Type", "Type", style: "col-lg-2"),
+              grid.Column("OwnerId", "Owner", style: "col-lg-2"),
+              grid.Column("IsUsed", "IsUsed", style: "col-lg-2"),
               grid.Column("Sum", header: "Sum", format: @<text>@String.Format("{0:C}", item.Sum) </text>),
               grid.Column(header: "Action", canSort: false, style: "action",
                 format: @<text>
